--- a/viper.properties
+++ b/viper.properties
@@ -1,9 +1,9 @@
-sender=anthony.musyoki@gmail.com
-name=artfullyContrived
+sender=
+name=
 gitHubPassword=
 emailPassword=
 host=smtp.gmail.com
 port=465
-subject=[NeverwinterDP] Weekly report.
+subject=Weekly report.
 body=Please find attached weekly report for DemandCube repositories for week starting 
-to=anthony.musyoki@gmail.com
+to=
