--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'findbugs'
 apply plugin:'application'
+mainClassName = "com.demandcube.githubflow.Cron"
 repositories {
     mavenCentral()
 }
@@ -21,4 +22,7 @@ findbugsMain {
         xml.enabled = !html.enabled
     }
 }
-mainClassName = "com.demandcube.githubflow.Cron"
+run {    
+    /* Can pass all the properties: */
+    systemProperties = System.getProperties()
+}
