--- a/viper.properties
+++ b/viper.properties
@@ -1,9 +1,6 @@
 sender=neverwinterdp@gmail.com
-name=artfullyContrived
-gitHubPassword=
-emailPassword=
 host=smtp.gmail.com
 port=465
-subject=Weekly report.
+subject=Weekly report [NeverwinterDP].
 body=Please find attached weekly report for DemandCube repositories for week starting 
-to=anthony.musyoki@gmail.com
+to=
