--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,5 @@ run {
 
 compileJava {
     options.fork = true  // Fork your compilation into a child process
-    options.forkOptions.setMemoryMaximumSize("1g") // Set maximum memory to 4g
+    options.forkOptions.setMemoryMaximumSize("512m") // Set maximum memory to 4g
 }
